--- a/style3.css
+++ b/style3.css
@@ -4,7 +4,7 @@
 .game{
     background: url(img/background.png) center/cover;
     width: 50rem;
-    height: 37.5rem;
+    height: 35rem;
     display:flex;
     margin:auto;
     text-align: center;
@@ -91,10 +91,11 @@ button:hover{
 }
 
 .game__field{
+    position: relative;
     width: 100%;
     height: 100%;
-    /* background-color:blue; */
-    /* opacity: 0.7; */
-    margin-top:100px;
-    position: relative;
+    /* background-color:blue;
+    opacity: 0.7; */
+    margin-top:40px;
+ 
 }
